hard-gists/3077639/run.log
=== Docker Run Log for 3077639 ===
Started at: Mi 29. Okt 13:39:22 CET 2025

[2025-10-29 13:39:22] START: Running container for 3077639
[2025-10-29 13:39:22] SUCCESS: Container e57bd47379dfe834d5640d69ac05be106a114f0af55e5b4b36abe1b180a60f1c started for 3077639
=== Container logs for 3077639 ===
  File "/snippet.py", line 34
    print 'Data written to %s' % meta['file']
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3077639 ===
[2025-10-29 13:39:24] INFO: Container e57bd47379dfe834d5640d69ac05be106a114f0af55e5b4b36abe1b180a60f1c has stopped
